--- a/springboot-jsp-jpa/src/main/resources/application.properties
+++ b/springboot-jsp-jpa/src/main/resources/application.properties
@@ -9,9 +9,13 @@ spring.messages.encoding=UTF-8
 server.port=8088
 
 ## 数据源
-spring.datasource.url=jdbc:mysql://localhost:3306/springBoot?useUnicode=true&characterEncoding=utf8
-spring.datasource.username=root
-spring.datasource.password=123456
+#spring.datasource.url=jdbc:mysql://localhost:3306/springBoot?useUnicode=true&characterEncoding=utf8
+#spring.datasource.username=root
+#spring.datasource.password=123456
+
+spring.datasource.url=jdbc:mysql://45.77.131.205:3306/spring?useUnicode=true&characterEncoding=utf8
+spring.datasource.username=admin
+spring.datasource.password=admin123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 ## JSP配置
